Model training done

--- a/notebooks_for_EDA/2. Model_Training.ipynb
+++ b/notebooks_for_EDA/2. Model_Training.ipynb
@@ -63,6 +63,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.97127547,  1.42371826],\n",
+       "       [ 0.26943961,  1.31128706],\n",
+       "       [-0.58688162, -1.44327736],\n",
+       "       ...,\n",
+       "       [-0.92146186,  0.63669986],\n",
+       "       [-0.38241973, -1.21841495],\n",
+       "       [-0.18676257, -1.16219935]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_scaled\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
